<resources>

    <string name="app_name">StoWeather</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_main">Weather</string>
 	<string name="degCelcius">\u2103</string>
 	<string name="degFarhenheit">\u2109</string>
 	<string name="txtHigh">H: </string>
 	<string name="txtLow">L: </string>
 	<string name="windinfo">Wind Info</string>
 	<string name="speed">Wind Speed: </string>
 	<string name="speedmps">m/s</string>
 	<string name="direction">Wind Direction: </string>
 	<string name="humidity">Humidity</string>
 	<string name="Pressure">Pressure</string>
 	<string name="pref_radius">Area to cover</string>
 	<string name="pref_radius_summ">Radius of area to cover</string>
 	<string name="pref_radius_category">RADIUS</string>
 	<string name="radius_limit">Radius area (km)</string>
 	
 	<string name="pref_temp_title">Temperature settings</string>
 	<string name="pref_temp">Temperature in metric units</string>
 	<string name="pref_temp_summ">Shows Temperature in metric or imperial format</string>
 	
 	
</resources>